# AutoFlight

./: .gitignore  COPYING.txt  README.md
AdvancedInstaller/: .gitignore  AutoFlight.aip  AutoFlight.back.aip
AdvancedInstaller/AutoFlight-cache/part1/: output-info.ini
AdvancedInstaller/AutoFlight-cache/part2/: output-info.ini
AdvancedInstaller/AutoFlight-cache/part3/: output-info.ini
AdvancedInstaller/AutoFlight-cache/part4/: output-info.ini
AdvancedInstaller/AutoFlight-cache/part6/: output-info.ini
build_win/: .gitignore  AutoFlight_automoc.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  moc_afmainwindow.cpp  moc_altitude.cpp  moc_asmainwindow.cpp  moc_battery.cpp  moc_configurecontrols.cpp  moc_connection.cpp  moc_gallerywidget.cpp  moc_imgprocmainwindow.cpp  moc_map3d.cpp  moc_orientation.cpp  moc_qcustomplot.cpp  moc_qnodeseditor.cpp  moc_rotatableimageview.cpp  moc_rtgraph.cpp  moc_selectcontroller.cpp  moc_sensordataviewer.cpp  moc_sessionviewer.cpp  moc_signalstrength.cpp  moc_speed.cpp  moc_timelinewidget.cpp  moc_titledbox.cpp  moc_videodisplay.cpp  moc_visualpipeline.cpp  moc_welcomedialog.cpp  qrc_resources.cpp  update_build_number.py
build_win/__/src/: resources.qrc.depends
documentation/: Makefile  make.bat  make_autoscript.sh
documentation/source/: buildingfromsource_ubuntu.rst  conf.py  gettingstarted.rst  index.rst
documentation/source/autoscript/: Makefile  functions.rst  index.rst  intro.rst  make.bat  tutorial.rst
documentation/source/imageprocessing/: index.rst  intro.rst
lib/include/Qsci/: qsciapis.h  qscilexer.h  qscilexerbash.h  qscilexercmake.h  qscilexercpp.h  qscilexercss.h  qscilexercustom.h  qscilexerd.h  qscilexerfortran77.h  qscilexerhtml.h  qscilexerlua.h  qscilexerpascal.h  qscilexerperl.h  qscilexerpostscript.h  qscilexerpov.h  qscilexerproperties.h  qscilexerpython.h  qscilexerruby.h  qscilexersql.h  qscilexertcl.h  qscilexertex.h  qscilexerverilog.h  qscimacro.h  (+5 more)
src/: afconstants.h  afmainwindow.cpp  afmainwindow.h  asmainwindow.cpp  asmainwindow.h  autoflight.cpp  autoflight.h  cat  main.cpp  resources.qrc
src/ardrone/: ardrone.cpp  ardrone.h  ardroneconfiguration.h  controllink.cpp  controllink.h  iconnectionstatuslistener.h
src/autoscript/: asengine.cpp  asengine.h  aserror.h  asioredirector.cpp  asioredirector.h  asmodules.cpp  asmodules.h  iscriptsimulationui.h
src/dialogs/: configurecontrols.cpp  configurecontrols.h  dronesettings.cpp  dronesettings.h  selectcontroller.cpp  selectcontroller.h  sessionviewer.cpp  sessionviewer.h  welcomedialog.cpp  welcomedialog.h
src/imgproc/: imageprocessor.cpp  imageprocessor.h
src/imgprocui/: imagevisualizer.cpp  imagevisualizer.h  imgprocmainwindow.cpp  imgprocmainwindow.h  visualpipeline.cpp  visualpipeline.h
src/qcustomplot/: qcustomplot.cpp
src/tools/: ardroneconfigurationfileio.cpp  ardroneconfigurationfileio.h  controllerconfigurationfileio.cpp  controllerconfigurationfileio.h  sessionreader.cpp  sessionreader.h  sessionrecorder.cpp  sessionrecorder.h
src/widgets/: altitude.cpp  altitude.h  battery.cpp  battery.h  connection.cpp  connection.h  gallerywidget.cpp  gallerywidget.h  map3d.cpp  map3d.h  orientation.cpp  orientation.h  rotatableimageview.cpp  rotatableimageview.h  rtgraph.cpp  rtgraph.h  sensordataviewer.cpp  sensordataviewer.h  signalstrength.cpp  signalstrength.h  speed.cpp  speed.h  timelinewidget.cpp  timelinewidget.h  titledbox.cpp  titledbox.h  videodisplay.cpp  videodisplay.h
translations/: translations.ts
(+48 files in other folders)
